# greencompute-api

./: .gitignore  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
services/control-plane/: pyproject.toml
services/control-plane/src/greencompute_control_plane/: config.py  main.py
services/control-plane/src/greencompute_control_plane/application/: services.py
services/control-plane/src/greencompute_control_plane/infrastructure/: repository.py
services/control-plane/src/greencompute_control_plane/transport/: security.py
services/control-plane/src/greenference_control_plane/: config.py  main.py
services/control-plane/src/greenference_control_plane/application/: services.py
services/control-plane/src/greenference_control_plane/domain/: metering.py  scheduler.py  state.py
services/control-plane/src/greenference_control_plane/infrastructure/: repository.py
services/control-plane/src/greenference_control_plane/transport/: routes.py
services/gateway/: pyproject.toml
services/gateway/src/greencompute_gateway/: main.py
services/gateway/src/greencompute_gateway/domain/: templates.py
services/gateway/src/greencompute_gateway/infrastructure/: inference_client.py  stripe_client.py
services/gateway/src/greencompute_gateway/transport/: routes.py
services/gateway/src/greenference_gateway/: main.py
services/gateway/src/greenference_gateway/application/: billing_service.py  services.py
services/gateway/src/greenference_gateway/domain/: routing.py  templates.py
services/gateway/src/greenference_gateway/infrastructure/: billing_repository.py  (+2 more)
(+69 files in other folders)
