[project]
name = "greenference-control-plane"
version = "0.1.0"
description = "Greenference control plane service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "greenference-protocol",
  "greenference-persistence",
]

[tool.uv.sources]
greenference-persistence = { workspace = true }
greenference-protocol = { path = "../../../greenference/protocol" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenference_control_plane"]
